test/corpus/strings.txt
================================================================================
Strings: Single Quoted
================================================================================

'Single quoted string'
'Single quoted with another '' inside it'

--------------------------------------------------------------------------------

(source_file
  (string)
  (string))

================================================================================
Strings: Double Quoted
================================================================================

"Double quoted string"
"Double quoted with another "" inside it"

--------------------------------------------------------------------------------

(source_file
  (string)
  (string))

================================================================================
Strings: Percent Symbol
================================================================================

"This should be a string and % not a comment"

--------------------------------------------------------------------------------

(source_file
  (string))

================================================================================
Strings: Formatting
================================================================================

"a string: %s"
"an integer: %d"
"an integer: %4d"
"a left justified integer: %-4d"
"an integer converted to float: %#fd"
"an integer with a sign: %+4d"
"an integer padded with zeros: %04d"
"an unsigned integer: %u"
"an unsigned integer: %4u"
"an integer converted to hexadecimal: %x"
"a float: %d"
"a float: %3.2d"
"a float (exponential form): %3.2e"
"a float (exponential form): %3.2g"
"a character: %c"
"%2$s is %1$d-year old."
"%#4.2b"
"This %% is a floating number with an f after it %#4.2ff"

--------------------------------------------------------------------------------

(source_file
  (string
    (formatting_sequence))
  (string
    (formatting_sequence))
  (string
    (formatting_sequence))
  (string
    (formatting_sequence))
  (string
    (formatting_sequence))
  (string
    (formatting_sequence))
  (string
    (formatting_sequence))
  (string
    (formatting_sequence))
  (string
    (formatting_sequence))
  (string
    (formatting_sequence))
  (string
    (formatting_sequence))
  (string
    (formatting_sequence))
  (string
    (formatting_sequence))
  (string
    (formatting_sequence))
  (string
    (formatting_sequence))
  (string
    (formatting_sequence)
    (formatting_sequence))
  (string)
  (string
    (formatting_sequence)
    (formatting_sequence)))

================================================================================
Strings: Escaping
================================================================================

"This\tis\nan\\escaped\tstring\r\n"
"This\ i\s \a norma\l \string"
"\"

--------------------------------------------------------------------------------

(source_file
  (string
    (special_escape_sequence)
    (special_escape_sequence)
    (special_escape_sequence)
    (special_escape_sequence)
    (special_escape_sequence)
    (special_escape_sequence))
  (string)
  (string))
