test/corpus/struct.txt
================================================================================
Struct: Simple Initialization
================================================================================

a.b = 1
a.b.c = 1

--------------------------------------------------------------------------------

(source_file
  (assignment
    (struct
      (identifier)
      (identifier))
    (number))
  (assignment
    (struct
      (identifier)
      (identifier)
      (identifier))
    (number)))


================================================================================
Struct: Simple Access
================================================================================

a.b
a.b.c

--------------------------------------------------------------------------------

(source_file
  (struct
    (identifier)
    (identifier))
  (struct
    (identifier)
    (identifier)
    (identifier)))

================================================================================
Struct: Indexed Initialization
================================================================================

a(1).b = 1

--------------------------------------------------------------------------------

(source_file
  (assignment
    (struct
      (function_call
        (identifier)
        (arguments
          (number)))
      (identifier))
    (number)))

================================================================================
Struct: Indexed Access
================================================================================

a(1).b
a.b(1)
a(1).b(1)

--------------------------------------------------------------------------------

(source_file
  (struct
    (function_call
      (identifier)
      (arguments
        (number)))
    (identifier))
  (struct
    (identifier)
    (function_call
      (identifier)
      (arguments
        (number))))
  (struct
    (function_call
      (identifier)
      (arguments
        (number)))
    (function_call
      (identifier)
      (arguments
        (number)))))
