test/corpus/try.txt
================================================================================
Try Statement
================================================================================

try
    disp('ok')
catch
    disp('not ok')
end

--------------------------------------------------------------------------------

(source_file
  (try_statement
    (block
      (function_call
        (identifier)
        (arguments
          (string))))
    (catch_clause
      (block
      (function_call
        (identifier)
        (arguments
          (string)))))))
